[IDP-961] added InitiativeDTO, mapper and faker. Added controller tests and updated service tests.